oop_mro/tests/trybuild/fail_override_no_inherited.rs
use oop_mro::prelude::*;

oop_class! {
    class Animal {
        #[override]
        virtual fn speak(&self) -> String {
            String::new()
        }
    }
}

fn main() {}
